--- a/.env.exemplo
+++ b/.env.exemplo
@@ -1,6 +1,3 @@
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USER=
-DB_PASSWORD=
-JWT_SECRET=
+JWT_SECRET=senha secreta
+PORT=porta disponivel
+DB_URL=postgres://usuario:senha@host:porta/nome_do_banco
